--- a/index.html
+++ b/index.html
@@ -6,96 +6,121 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="Volodymyr, cv, resume" />
     <meta name="description" content="Это сайт - резюме Владимира Вариводы" />
+    <link rel="stylesheet" href="index.css" />
     <title>Volodymyr Resume</title>
   </head>
   <body>
-    <img src="My photo.jpeg" alt="My photo" width="150" />
+    <div class="container">
+      <div class="info">
+        <img src="My photo.jpeg" alt="My photo" class="my_photo" />
 
-    <h1>Владимир Варивода</h1>
+        <div class="info-text">
+          <h1>Владимир Варивода</h1>
 
-    <hr />
+          <hr />
 
-    <p>
-      В прошлом <em> профисиональный спортсмен,</em>
-      <strong>серебряный призер чемпионата мира </strong> по хоккею с шайбой.
-    </p>
+          <p>
+            В прошлом профисиональный спортсмен, серебряный призер чемпионата
+            мира по хоккею с шайбой.
+          </p>
 
-    <p>
-      <strong
-        ><em>Я люблю путешествовать, заниматься спортом и програмировать </em>
-      </strong>
-    </p>
+          <p>Я люблю путешествовать, заниматься спортом и програмировать.</p>
 
-    <a href="https://www.instagram.com/_varivoda/" target="_blank">My links</a>
-    |
-    <a
-      href="https://www.instagram.com/borodina_beauty_concept/?utm_medium=copy_link"
-      target="_blank"
-      >My wife</a
-    >
+          <h4>Список социальных сетей:</h4>
 
-    <h2>My hobby</h2>
-
-    <ul>
-      <li>Hockey</li>
-      <li>Games</li>
-      <li>Hookah</li>
-    </ul>
-
-    <h2>My work expirience</h2>
-
-    <table>
-      <thead>
-        <tr>
-          <th>Work</th>
-          <th>Position</th>
-          <th>Year</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Hockey</td>
-          <td>Defender</td>
-          <td>16</td>
-        </tr>
-      </tbody>
-      <tr>
-        <td>HSC MVS</td>
-        <td>Administrator</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>DIAM</td>
-        <td>Inspector</td>
-        <td>1</td>
-      </tr>
-    </table>
-
-    <h2>Связаться со мной</h2>
-
-    <form>
-      <div>
-        <label for="name">Ваше имя:</label>
-        <input type="text" id="name" placeholder="Введите имя" />
+          <a href="https://www.instagram.com/_varivoda/" target="_blank"
+            >My links</a
+          >
+          |
+          <a
+            href="https://www.instagram.com/borodina_beauty_concept/?utm_medium=copy_link"
+            target="_blank"
+            >My wife</a
+          >
+        </div>
       </div>
 
-      <div>
-        <label for="email">Ваше email:</label>
-        <input type="email" id="email" placeholder="Введите email" />
+      <div class="card bg-green">
+        <h2>Мои хобби</h2>
+
+        <ol class="list">
+          <li>Хоккей</li>
+          <li>Игры</li>
+          <li>Кальян</li>
+        </ol>
       </div>
 
-      <div>
-        <label for="massage">Ваше сообщение:</label>
-        <br />
-        <textarea
-          id="massage"
-          cols="25"
-          rows="5"
-          placeholder="Ваше сообщение"
-        ></textarea>
+      <div class="card bg-red">
+        <h2>Опыт работы</h2>
+
+        <table class="table">
+          <!-- <thead>
+            <tr>
+              <th>Работа</th>
+              <th>Должность</th>
+              <th>Стаж</th>
+            </tr>
+          </thead> -->
+          <tbody>
+            <tr>
+              <td>Хоккей</td>
+              <td>Защитник</td>
+              <td>2002 - 2019</td>
+            </tr>
+          </tbody>
+          <tr>
+            <td>ГСЦ МВС</td>
+            <td>Администратор</td>
+            <td>2019 - 2021</td>
+          </tr>
+          <tr>
+            <td>ДIАМ</td>
+            <td>Инспектор</td>
+            <td>2021 - сейчас</td>
+          </tr>
+        </table>
       </div>
 
-      <input type="submit" value="Отправить!" />
-    </form>
+      <div class="card bg-yellow">
+        <h2>Мои курсы</h2>
+
+        <ul class="link-list">
+          <li>
+            <a href="#">Получение професси Frontend Разработчика</a>
+          </li>
+          <li>
+            <a href="#">Все курсы</a>
+          </li>
+        </ul>
+      </div>
+
+      <form action="/" class="form">
+        <h2>Связаться со мной</h2>
+
+        <div class="form-row">
+          <div class="form-group">
+            <label for="name">Ваше имя:</label>
+            <input type="text" id="name" placeholder="Введите имя" />
+          </div>
+
+          <div class="form-group">
+            <label for="email">Ваше email:</label>
+            <input type="email" id="email" placeholder="Введите email" />
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="massage">Ваше сообщение:</label>
+          <textarea
+            id="massage"
+            cols="25"
+            rows="5"
+            placeholder="Ваше сообщение"
+          ></textarea>
+        </div>
+
+        <input class="btn" type="submit" value="Отправить!" />
+      </form>
+    </div>
   </body>
 </html>
